--- a/plugin.yml
+++ b/plugin.yml
@@ -1,6 +1,6 @@
 name: MysteryChest
 author: ImagicalGamer
-version: 0.0.5
+version: 0.0.6-PreRelease
 api: ["2.0.0"]
 main: ImagicalGamer\MysteryChest\Main
 load: STARTUP
